Move fit.js and predict.js to test-module. Remove output-folder from .env and add required fields. Fix processCorpus.js. Add fit-predict-rate pipeline.

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-CORPUS_FOLDER=./corpus/
-OUTPUT_FOLDER=./output-data/
+BLR_CORPUS_PATH=./corpus/blr/
+RU_CORPUS_PATH=./corpus/ru/
+UKR_CORPUS_PATH=./corpus/ukr/
+TRAIN_SIZE=0.8
