--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "markov-language-model",
   "version": "1.0.0",
   "description": "",
-  "main": "fit.js",
+  "main": "test-module/fit.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
