Clear .env file.

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-BLR_CORPUS_PATH=./corpus/blr/
-RU_CORPUS_PATH=./corpus/ru/
-UKR_CORPUS_PATH=./corpus/ukr/
-N=5
-TRAIN_SIZE=0.8
-COUNT_EXPERIMENTS=100
+BLR_CORPUS_PATH=
+RU_CORPUS_PATH=
+UKR_CORPUS_PATH=
+N=
+TRAIN_SIZE=
+COUNT_EXPERIMENTS=
